--- a/nacosconfig/pom.xml
+++ b/nacosconfig/pom.xml
@@ -25,6 +25,12 @@
             <groupId> com.alibaba.cloud </groupId>
             <artifactId> spring-cloud-starter-alibaba-nacos-config </artifactId>
         </dependency>
+
+        <!-- sentinel依赖 -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
