--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
         <java.version>1.8</java.version>
         <spring-cloud-alibaba-version>2.2.5.RELEASE</spring-cloud-alibaba-version>
     </properties>
+    <modules>
+        <module>nacosconfig</module>
+        <module>cloudalibaba-commons</module>
+    </modules>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
