--- a/cloudalibaba-consumer8084/pom.xml
+++ b/cloudalibaba-consumer8084/pom.xml
@@ -18,11 +18,22 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+            <!-- 不使用Ribbon 进行客户端负载均衡 -->
+            <!-- <exclusions>
+                 <exclusion>
+                     <groupId>org.springframework.cloud</groupId>
+                     <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                 </exclusion>
+             </exclusions>-->
         </dependency>
         <!--SpringCloud ailibaba sentinel -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
             <groupId>com.example</groupId>
