--- a/cloudalibaba-consumer8084/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-consumer8084/src/main/resources/bootstrap.yml
@@ -13,6 +13,12 @@ spring:
         dashboard: localhost:8080
         #默认8719端口，假如被占用会自动从8719开始依次+1扫描,直至找到未被占用的端口
         port: 8719
+#设置feign客户端超时时间(OpenFeign默认支持ribbon)
+ribbon:
+  #指的是建立连接后从服务器读取到可用资源所用的时间
+  ReadTimeout: 5000
+  #指的是建立连接所用的时间，适用于网络状况正常的情况下,两端连接所用的时间
+  ConnectTimeout: 5000
 
 #消费者将要去访问的微服务名称(注册成功进nacos的微服务提供者)
 service-url:
