--- a/cloudalibaba-consumer8084/pom.xml
+++ b/cloudalibaba-consumer8084/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>cloudalibaba-commons</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-datasource-nacos</artifactId>
+            <version>1.8.1</version>
+        </dependency>
     </dependencies>
 
     <build>
