--- a/cloudalibaba-consumer8084/pom.xml
+++ b/cloudalibaba-consumer8084/pom.xml
@@ -16,6 +16,10 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
             <!-- 不使用Ribbon 进行客户端负载均衡 -->
