--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         <java.version>1.8</java.version>
         <spring-cloud-alibaba-version>2.2.5.RELEASE</spring-cloud-alibaba-version>
         <openfeign-version>2.2.5.RELEASE</openfeign-version>
+        <spring-cloud-gateway-varsion>Hoxton.SR8</spring-cloud-gateway-varsion>
+        <spring-boot-starter-parent-version>2.3.11.RELEASE</spring-boot-starter-parent-version>
     </properties>
     <modules>
         <module>nacosconfig</module>
@@ -25,6 +27,7 @@
         <module>cloudalibaba-consumer8084</module>
         <module>cloudalibaba-provider-9003</module>
         <module>cloudalibaba-provider-9004</module>
+        <module>cloudalibaba-gateway8888</module>
     </modules>
     <dependencies>
         <dependency>
@@ -38,11 +41,6 @@
             <optional>true</optional>
         </dependency>
 
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-tomcat</artifactId>
@@ -69,6 +67,18 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-openfeign</artifactId>
                 <version>${openfeign-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-gateway-varsion}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring-boot-starter-parent-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
