--- a/cloudalibaba-gateway8888/src/main/resources/bootstrap.yml
+++ b/cloudalibaba-gateway8888/src/main/resources/bootstrap.yml
@@ -10,9 +10,21 @@ spring:
     gateway:
       discovery:
         locator:
-          enabled: true #开启注册中心路由功能
-      routes:  # 路由
+          enabled: false #开启注册中心路由功能
+      routes: # 路由
         - id: nacos-provider #路由ID，没有固定要求，但是要保证唯一，建议配合服务名
-          uri: http://localhost:9003/nacos-provider # 匹配提供服务的路由地址
+          uri: lb://nacos-provider # 匹配提供服务的路由地址
           predicates: # 断言
-            - Path=/demo/** # 断言，路径相匹配进行路由
+            - Path=/demo/**
+            #- After=2023-02-06T15:56:10.529+08:00[Asia/Shanghai] # 在这个时间之后的请求都能通过
+            #- Cookie=username,[a-z]+ # 匹配Cookie的key和value（正则表达式）
+            #- Header=X-Request-Id,\d+ #表示数字
+            #- Host=**.test.com #匹配当前的主机地址发出的请求
+            - Method=GET,POST # 匹配GET请求或者POST请求,其他类型的请求i报404
+            - Query=id,.+ # 匹配请求参数，这里如果需要匹配多个参数，可以写多个Query
+            - Query=name,[a-z]+ # 匹配请求参数，这里如果需要匹配多个参数，可以写多个Query
+        #routes:  # 路由
+       # - id: nacos-provider #路由ID，没有固定要求，但是要保证唯一，建议配合服务名
+        #  uri: http://localhost:9003/nacos-provider # 匹配提供服务的路由地址
+         # predicates: # 断言
+          #  - Path=/demo/** # 断言，路径相匹配进行路由
